--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans:300|Oswald:700" rel="stylesheet">
       <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
       <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
   <header>
