--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link href="resources/css/reset.css" rel="stylesheet" type="text/css">
       <link href="resources/css/style.css" rel="stylesheet" type="text/css">
       <meta name="viewport" content="width=device-width,initial-scale=1">
+      <link rel="shortcut icon" type="image/png" href="resources/images/ic-logo.png" />
   </head>
   <body>
   <header>
